# play_ollama

./: Cargo.toml
examples/: context.rs  simple.rs
src/: lib.rs
